One more update to fix sub-nav on mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -856,11 +856,12 @@ a.schedule-link {
 
 #lineup-2019-wrap #lineup-sub-nav {
   position: sticky;
+  position: -webkit-sticky;
   top: 4vh;
   width: 100vw;
   background: black;
   padding-top: 0.5em;
-  z-index: 1;
+  z-index: 99;
 }
 
 #lineup-2019-wrap #lineup-sub-nav ul {
